--- a/test.css
+++ b/test.css
@@ -2,7 +2,7 @@ bodyTemp {
     background-color: lightblue;
 }
 
-h1_Temp {
+.h1_Temp {
     text-decoration-color: : navy;
     margin-left: 20px;
     font-size: 50;
