--- a/test.css
+++ b/test.css
@@ -2,8 +2,7 @@ bodyTemp {
     background-color: lightblue;
 }
 
-.h1_Temp {
-    text-decoration-color: : navy;
-    margin-left: 20px;
-    font-size: 50;
+.textSample {
+    text-decoration-color: : red;
+    font-size: 100;
 }
