--- a/test.css
+++ b/test.css
@@ -3,6 +3,8 @@ bodyTemp {
 }
 
 .textSample {
-    text-decoration-color: : red;
-    font-size: 100;
+    text-decoration-color:red;
+    font-size: 100px;
 }
+
+<link rel="stylesheet" href="https://github.com/MaybeRiaan/TestNCC/blob/master/test.css">
