--- a/test.css
+++ b/test.css
@@ -7,4 +7,4 @@ bodyTemp {
     font-size: 100px;
 }
 
-<link rel="stylesheet" href="https://github.com/MaybeRiaan/TestNCC/blob/master/test.css">
+//<link rel="stylesheet" href="https://github.com/MaybeRiaan/TestNCC/blob/master/test.css">
